--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="inp">
         <input onkeyup="searchMe()" id="search" type="text" placeholder="Search Name">
 
-        <button onclick="typeData()">Add Row</button>
+        <button onclick="typeData()">Add User</button>
     </div><br>
     <table class="table table-striped" id="container">
         <thead>
@@ -34,11 +34,16 @@
             </tr>
         </thead>
         <tbody id="tbody">
-            
+
         </tbody>
     </table>
- 
-    
+
+    <div class="btn-group" role="group" aria-label="Basic outlined example">
+        <button onclick="first(this)" type="button" class="btn btn-outline-primary">First</button>
+        <button onclick="previous(this)" type="button" class="btn btn-outline-primary">Previous</button>
+        <button onclick="next(this)" type="button" class="btn btn-outline-primary">Next</button>
+        <button onclick="last(this)" type="button" class="btn btn-outline-primary">Last</button>
+      </div>
 
 
 
@@ -46,7 +51,11 @@
 
 
 
+    <script src="table.js"></script>
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
